[build-system]
requires = [
    "setuptools >= 48",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["practical_rife*"]
exclude = ["test_vids*", "tests*"]

[project]
name = "practical_rife"
version = "0.0.1"

dependencies = [
    "numpy>=1.16, <=1.23.5",
    "tqdm>=4.35.0",
    "sk-video>=1.1.10",
    "torch>=1.3.0",
    "opencv-python>=4.1.2",
    "moviepy>=1.0.3",
    "torchvision>=0.7.0",
]